fix: cut off overflow

--- a/index.css
+++ b/index.css
@@ -16,6 +16,6 @@ body {
 }
 html {
   box-sizing: border-box;
-  overflow-x: scroll;
-  overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
